#pragma once
#include <vector>
#include "Space.h"
struct Point{
    std::vector<float> coordinates;
};
